storeToken() is async-native